x64 build and README base

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ ArtifactsKit/Release/ArtifactsKit.tlog/unsuccessfulbuild
 *.db-wal
 *.db-shm
 *.db
+ArtifactsKit/x64/Release/ArtifactsKit.vcxproj.FileListAbsolute.txt
