--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ ArtifactsKit/Release/ArtifactsKit.tlog/unsuccessfulbuild
 *.db-shm
 *.db
 ArtifactsKit/x64/Release/ArtifactsKit.vcxproj.FileListAbsolute.txt
+ArtifactsKit/.vs/ArtifactsKit/v16/.suo
